--- a/views/shoes.jade
+++ b/views/shoes.jade
@@ -1,7 +1,7 @@
 doctype html
 html
 head
-title=skatestuffonly
+title='skatestuffonly'
 body
     div.container
         input#nameSearch(type='text' onkeyup="searchTable('nameSearch', 0)" placeholder='Search by names' title='Type in a name')
@@ -11,8 +11,8 @@ body
         table
             thead
                 tr
-                    td='Image'
                     td='Name'
+                    td='Image'
                     td='Price'
                     td='Link'
                     td='smthg'
