--- a/views/shoes.ejs
+++ b/views/shoes.ejs
@@ -10,7 +10,7 @@
     <div class="col-sm-8">
       <div class="jumbotron">
         <h1>support skateboarding</h1>
-        <table>
+        <table class="sortable">
           <thead>
             <tr>
               <th>Nr</th>
