--- a/views/shoes.ejs
+++ b/views/shoes.ejs
@@ -9,12 +9,13 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="jumbotron">
-        <h1>support skateboarding</h1>
+        <h1>skateboarding-shop</h1>
+        <h6>protecting skate culture</h6>
         <table class="sortable">
           <thead>
             <tr>
               <th>Nr</th>
-              <th>Name</th>
+              <th><a href="/search/name">Name</a></th>
               <th>Image</th>
               <th>Price</th>
               <th>Link</th>
@@ -23,8 +24,8 @@
           <% itemList.forEach(function(item) { %>
             <tr>
               <td><%= item[0] %></td>
-              <td><%= item[2] %></td>
-              <td><img src="<%= item[1] %>" alt="itmimg"/></td>
+              <td><%= item[1] %></td>
+              <td><img src="<%= item[2] %>" alt="itmimg"/></td>
               <td><%= item[3] %></td>
               <td><a href="<%= item[4] %>">View</a></td>
             </tr>
