--- a/views/shoes.ejs
+++ b/views/shoes.ejs
@@ -15,7 +15,7 @@
           <thead>
             <tr>
               <th>Nr</th>
-              <th><a href="/search/name">Name</a></th>
+              <th><a href="/nameSort">Name</a></th>
               <th>Image</th>
               <th>Price</th>
               <th>Link</th>
